# disk-cleaner

./: README.md  package-lock.json  package.json
docs/: dev-memo.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
