[package]
authors = ["Zhao Guangjian"]
description = "Disk Cleaner"
edition = "2021"
name = "disk-cleaner"
version = "0.1.0"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "disk_cleaner_lib"

[build-dependencies]
tauri-build = {version = "2", features = [] }

[dependencies]
log = "0.4.28"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tauri = {version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = {version = "1.47.1", features = ["sync", "macros"] }
walkdir = "2.5.0"

[dev-dependencies]
tracing-subscriber = "0.3.20"
